tests/ecc-aws-559-route_table_without_tag_information/placebo-red/ec2.DescribeRouteTables_1.json
{
    "status_code": 200,
    "data": {
        "RouteTables": [
            {
                "Associations": [],
                "PropagatingVgws": [],
                "RouteTableId": "rtb-0f28fb304278d004a",
                "Routes": [
                    {
                        "DestinationCidrBlock": "10.0.0.0/16",
                        "GatewayId": "local",
                        "Origin": "CreateRouteTable",
                        "State": "active"
                    }
                ],
                "Tags": [],
                "VpcId": "vpc-12345asdfg",
                "OwnerId": "111111111111"
            }
        ],
        "ResponseMetadata": {}
    }
}
